--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talento Veículos - Encontre o carro dos seus sonhos</title>
+    <title>WHITE Veículos - Encontre o carro dos seus sonhos</title>
     <meta name="description" content="Plataforma completa para compra e venda de veículos. Encontre o carro perfeito ou venda o seu com segurança e facilidade." />
-    <meta name="author" content="Talento Veículos" />
+    <meta name="author" content="WHITE Veículos" />
 
-    <meta property="og:title" content="Talento Veículos - Encontre o carro dos seus sonhos" />
+    <meta property="og:title" content="WHITE Veículos - Encontre o carro dos seus sonhos" />
     <meta property="og:description" content="Plataforma completa para compra e venda de veículos. Encontre o carro perfeito ou venda o seu com segurança e facilidade." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
